--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -27,12 +27,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Proyectos}
-\cventry{FONDEF-CONICYT}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA REUNA}{Productos: en progreso}{Valparaíso, Santiago 2013 - En curso}
-\cventry{ECOS-Conicyt}{ECOS-Conicyt: Scheduling in Astronomy}{Considerando que ninguno de los observatorios profesionales ofrece una solución totalmente automatizada para optimizar el uso de las instalaciones astronómicas bajo condiciones cambiantes y dinámicas, en este proyecto se propone el desarrollo de un modelo de scheduling para el problema de scheduling con prioridades dinámicas.}{Colaboración: UTFSM, Université d'Avignon}{Productos: en progreso}{Santiago, 2011 - 2013}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, PUC, UV, UCN}{Productos: ASP, ASPu*}{Valparaíso, Santiago, 2008}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el pasado proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Productos: pyBACI, GSME, AWP, ECSA}{Valparaíso, 2009}
-\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, SWAT, ACG, SMCG, RAES, AWP, ARPA, AFI, SSG, EBE, H3E}{Valparaíso, 2006 - 2008}
-\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Univerdidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT). Estas tareas fueron prestadas por personal de nivel académico equivalente a profesores auxiliares o asociados en Ingeniería Informática}{Colaboración: UTFSM, NRAO}{Productos: Confidenciales}{Valparaíso, 2010}
+\cventry{FONDEF-CONICYT}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA, REUNA}{Productos: en progreso}{2013 - 2015}
+\cventry{ECOS-Conicyt}{ECOS-Conicyt: Scheduling in Astronomy}{Considerando que ninguno de los observatorios profesionales ofrece una solución totalmente automatizada para optimizar el uso de las instalaciones astronómicas bajo condiciones cambiantes y dinámicas, en este proyecto se propone el desarrollo de un modelo de scheduling para el problema de scheduling con prioridades dinámicas.}{Colaboración: UTFSM, Université d'Avignon}{Productos: en progreso}{2011 - 2013}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, AUI}{Productos: ASP, ASPu*, ADSP}{2009 - 2010}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31090034: Software development for ALMA: Strengthening development expertise and collaboration networks}{El objetivo fue continuar el desarrollo y la investigación lograda en el proyecto ALMA-CONICYT \#31060008 junto con el mantenimiento, mejoras, y difusión de las experticies generadas}{Colaboración: UTFSM, ESO, UV, UCN, PUCV}{Productos: GSME, AWP, ECSA}{2009}
+\cventry{ALMA-CONICYT}{ALMA-CONICYT \#31060008: Software development for ALMA}{Se profundizó la colaboración en el desarrollo del framework de ACS, estableciendo bases sólidas para la transferencia de tecnología entre el equipo ACS y la UTFSM mientras, al mismo tiempo, se preparaban ingenieros de software chilenos}{Colaboración: UTFSM, ALMA, NRAO, ESO}{Productos: gTCS, CSAT, TelSE, ACG, SMCG, AWP, ARPA, SSG, EBE, H3E}{2006 - 2008}
+\cventry{NRAO AUI}{Convenio especial de colaboración científica y técnica entre Associated Universities, INC. y la Universidad Técnica Federico Santa María}{Proveer apoyo ténico en las tareas del subsistema Scheduling de Computing Integrated Product Team (CIPT)}{Colaboración: UTFSM, NRAO, AUI}{Productos: Confidenciales}{2010}
 
 %\cventry{ChiVO}{Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Financiamiento: FONDEF, ALMA, REUNA}{Resultados: En Progreso}{Valparaíso, Santiago}
 
@@ -51,11 +51,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Docencia}
-\cventry{AstroCouses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprendían temas fundamentales para comprender astronomía, y cuáles son sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso es dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
+\cventry{AstroCourses}{Astronomy related Courses for 2010-2, 2013-1}{Curso electivo del área de sistemas computacionales. En este curso los alumnos aprenden temas fundamentales para comprender astronomía, y sus implicancias dentro de la astro-ingeniería, y en particular, informática. El objetivo general de este curso es dar al alumno suficiente conocimiento para saber cuáles son los diversos tipos de telescopios, sistemas computacionales envueltos, y las características de los distintos proyectos de astronomía}{}{}{}
 
-\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: los ingenieros electrónicos, ingenieros mecánicos, operadores del telescopio del observatorio ALMA}{}{}{}
+\cventry{RPC}{Remote Python Course}{El objetivo del curso para los estudiantes es ser capaces de programar en Python con el fin de utilizar eficazmente la interfaz orientada a objetos de dispositivos de ALMA. El público objetivo son: ingenieros electrónicos, ingenieros mecánicos y operadores del telescopio del observatorio ALMA}{}{}{}
 
-\cventry{FeriaSW}{Taller de Ingeniería de Software}{En este curso se han realizado varios productos en el marco del equipo LIRAE. El curso consiste en desarrollar un producto de software con un cliente real}{Productos: Hevelius, LegoFARM, ALMA Lego Simulator}{}{}
+\cventry{FeriaSW}{Taller de Ingeniería de Software}{En este curso se han realizado varios productos en el marco del equipo LIRAE. El curso consiste en desarrollar un producto de software con un cliente real}{Productos: Hevelius, LegoFARM, ALS}{}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%   PRODUCTOS   %%%%%%%%%%%%%%%%%%%
@@ -63,29 +63,29 @@
 
 \section{Productos}
 %AIA
-\cventry{MDAS}{Methodology for development of array schedulers}{El objetivo principal de este proyecto fue definir una metodología que consiste en flujos de trabajo y herramientas de desarrollo para apoyar el diseño, implementación, evaluación y despliegue de algoritmos para el ASP. Los objetivos específicos fueron proporcionar un flujo de trabajo para los investigadores para que iterativamente puedan desarrollar, depurar, probar y perfilar sus algoritmos, automatizar la mayor cantidad de este flujo de trabajo que sea posible; permitir la reutilización de código mediante la definición de interfaces comunes; reutilizar herramientas de desarrollo, bibliotecas y metodologías; permitir que la exploración de hardware paralelo transparente}{}{}{}
+\cventry{MDAS}{Methodology for development of array schedulers}{El producto es una metodología que consiste en flujos de trabajo y herramientas de desarrollo para apoyar el diseño, implementación, evaluación y despliegue de algoritmos para el ASP. Los objetivos específicos son proporcionar un flujo de trabajo para los investigadores para que iterativamente puedan desarrollar, depurar, probar y perfilar sus algoritmos, automatizar la mayor cantidad de este flujo de trabajo que sea posible; permitir la reutilización de código mediante la definición de interfaces comunes; reutilizar herramientas de desarrollo, bibliotecas y metodologías; permitir que la exploración de hardware paralelo sea transparente}{}{}{}
 
 \cventry{ASP}{Array Scheduling problem}{Este problema está basado en la planificación de observaciones de ALMA, en donde los recursos son los arreglos de antenas y las tareas son las observaciones, y se busca utilizar de la forma más eficiente los recursos. Para las implementaciones específicas de cada solución se usó un modelo de problema en común}{}{}{}
 
-\cventry{ASPu*}{Array Scheduling using Simulated Annealing, Tabú Search, Evolutive Algorithm}{El objetivo de este proyecto fue el estudio del comportamiento de las Heurísticas de Simulated Annealing, Tabú Search y Evolitve Algorithm con el problema de Array Scheduling}{}{}{}
+\cventry{ASPu*}{Array Scheduling using Simulated Annealing, Tabú Search, Evolutive Algorithm}{El objetivo de estos productos fue el estudio del comportamiento de las Heurísticas de Simulated Annealing, Tabú Search y Evolutive Algorithm con el problema de Array Scheduling}{}{}{}
 
-\cventry{ADSP}{ALMA Dynamic Scheduling Problem Formalization}{Este proyecto buscaba investigar el problema dinámico de programación que se plantea en el proyecto ALMA. ALMA es un proyecto multinacional compuesto por 66 antenas de radiotelescopio, que tienen que ser coordinadas, y su tiempo de las observaciones tienen que ser cuidadosamente planeadas, lo que permite utilizar eficazmente el tiempo disponible para la observación, y para el mantenimiento. El objetivo final de este proyecto es desarrollar y comparar varios algoritmos para este problema}{}{}{}
+\cventry{ADSP}{ALMA Dynamic Scheduling Problem Formalization}{Este algortimo buscaba investigar el problema dinámico de programación que se plantea en el proyecto ALMA. ALMA es un proyecto multinacional compuesto por 66 antenas de radiotelescopio, que tienen que ser coordinadas, y su tiempo de las observaciones tienen que ser cuidadosamente planificadas, lo que permite utilizar eficazmente el tiempo disponible para la observación, y para el mantenimiento. El objetivo final de este proyecto es desarrollar y comparar varios algoritmos para este problema}{}{}{}
 
-\cventry{MAWRF}{Metheorogical Analysis base on WRF model}{Debido al interés de conocer cuál era el nivel de lo que tenían en cualquier dirección que una antena se dirigía, el objetivo del proyecto fue tener un código de Matlab que hiciera una aproximación numérica con los datos discretos que eran simulados en el Cluster de la Universidad de Valparaíso. Además tener el código de cálculo de la aproximación en cualquier dominio de esta resolución, y en cualquier  que tenga la antena y luego tener el código en un software libre como Octave}{}{}{}
+%\cventry{MAWRF}{Metheorological Analysis base on WRF model}{Debido al interés de conocer cuál era el nivel de lo que tenían en cualquier dirección que una antena se dirigía, el objetivo del proyecto fue tener un código de Matlab que hiciera una aproximación numérica con los datos discretos que eran simulados en el Cluster de la Universidad de Valparaíso. Además tener el código de cálculo de la aproximación en cualquier dominio de esta resolución, y en cualquier  que tenga la antena y luego tener el código en un software libre como Octave}{}{}{}
 
 %gTCS
-\cventry{gTCS}{Generic Telescope Control System Prototype}{En la mayoría de los observatorios, cuando se construye un nuevo telescopio, se debe escribir todo un nuevo sistema de control de telescopio (TCS en inglés). Se podría decir que hay casi un TCS por telescopio del mundo. Es evidente, de todos modos, que algunas secciones del código de cada TCS son bastante similares entre todos ellos, al igual que la transformación de coordenadas. El sistema de control del telescopio genérico (gTCS) pretendía ser un marco de base para el desarrollo y despliegue de la TCS de cualquier telescopio, independiente de su estructura física y el tipo de montaje que presenta}{}{}{}
+\cventry{gTCS}{Generic Telescope Control System Prototype}{En la mayoría de los observatorios, cuando se construye un nuevo telescopio, se debe escribir todo un nuevo sistema de control de telescopio (TCS en inglés). Se podría decir que hay casi un TCS por telescopio del mundo. Es evidente, de todos modos, que algunas secciones del código de cada TCS son bastante similares entre todos ellos, al igual que la transformación de coordenadas. El sistema de control del telescopio genérico (gTCS) es un marco de base para el desarrollo y despliegue del TCS de cualquier telescopio, independiente de su estructura física y el tipo de montaje que presenta}{}{}{}
 
-\cventry{CSAT}{Control System for Amateur Telescope}{El Sistema de Control de Telescopios Amateur es un TCS (Sistema de Control de telescopio) diseñado y construido para operar un telescopio de aficionado. El control se realiza por ACS, y la idea principal era que este TCS fuera utilizada como una guía para los gTCS.
-Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran proporcionar un entorno de simulación completa para el proyecto gTCS y diseñar un marco genérico de simulación basado en el simulador de control de ALMA, identificando las piezas comunes de un sistema de simulación para diferentes telescopios y dispositivos de hardware relacionados.
-}{}{}{}
+\cventry{CSAT}{Control System for Amateur Telescope}{El Sistema de Control de Telescopios Amateur es un TCS (Sistema de Control de telescopio) diseñado y construido para operar un telescopio de aficionado. El control se realiza por ACS, y la idea principal era que este TCS fuera utilizada como una guía para los gTCS}{}{}{}
+
+\cventry{TelSE}{Telescope Simulation Environment}{Este producto es un entorno de simulación completo para el proyecto gTCS y diseñar un marco genérico de simulación basado en el simulador de control de ALMA, identificando las piezas comunes de un sistema de simulación para diferentes telescopios y dispositivos de hardware relacionados.}{}{}{}
 
 %SWAT
-\cventry{SSG}{Sampling System GUI}{El objetivo fue crear una interfaz gráfica en Java, corriendo sobre ACS, que le permitiera al usuario reunir datos y graficarlos. Esto se podía hacer en diferentes intervalos de tiempo, diferentes frecuencias, y agruparlos como el usuario quisiera. Los usuarios de este proyecto son operadores y astrónomos del Operation Support Facilities (OSF) de ALMA}{}{}{}
+\cventry{SSG}{Sampling System GUI}{Es una interfaz gráfica en Java, corriendo sobre ACS, que permite al usuario reunir datos y graficarlos. Esto se puede hacer en diferentes intervalos de tiempo, diferentes frecuencias, y agruparlos como el usuario desee. Los usuarios son operadores y astrónomos del Operation Support Facilities (OSF) de ALMA}{}{}{}
 
-\cventry{ACG}{Alarms Configuration GUI}{Es una aplicación que ayuda en la configuración del sistema de alarmas dado una configuración de deployment de ACS. Eta configuración puede ser almacenada en un archivo formato XML, bajo la estructura de ACS CBD. Por esto, la manutención de un sistema de alarmas consistente puede ser extremadamente tedioso y se puede perder mucho tiempo. Esta interfaz gráfica facilita este trabajo}{}{}{}
+\cventry{ACG}{Alarms Configuration GUI}{Es una aplicación que ayuda en la configuración del sistema de alarmas dado una configuración de deployment de ACS. Esta configuración puede ser almacenada en un archivo formato XML, bajo la estructura de ACS CBD. Por esto, la manutención de un sistema de alarmas consistente puede ser extremadamente tedioso y se puede perder mucho tiempo. Esta interfaz gráfica facilita este trabajo}{}{}{}
 
-\cventry{SMCG}{State Machine Code Generetor}{El proyecto buscaba la creación de una máquina de generación de código reusable. La propósito principal es tener una implementación de máquina de estados que permita ejecutar y controlar su lógica}{}{}{}
+\cventry{SMCG}{State Machine Code Generetor}{Esta aplicación es una máquina de generación de código reusable. El propósito principal es tener una implementación de máquina de estados que permita ejecutar y controlar su lógica}{}{}{}
 
 \cventry{GSME}{Generic State Machine Engine}{El objetivo fue implementar un generador de código que permita crear un componente de ACS en Java desde un UML Statecharts Model}{}{}{}
 
@@ -93,22 +93,22 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 
 \cventry{H3E}{Hardware end to end example project}{La idea fue crear un ejemplo completo que demuestre ACS controlando algún hardware, incluyendo dispositivos de la plataforma, como sensores de humedad, pantallas LCD, pequeños motores, etc. Por ejemplo conectado al puerto serial de un computador. El primer prototipo se realizó usando Lego Mindstorm, que incluye motores y sensores simples}{}{}{}
 
-\cventry{CDBC}{CDB Checker}{El propósito de este proyecto es escribir herramientas que se pueden utilizar para comprobar archivos XML desde la línea de comandos}{}{}{}
+\cventry{CDBC}{CDB Checker}{El propósito de esta aplicación es escribir herramientas que se pueden utilizar para comprobar archivos XML desde la línea de comandos}{}{}{}
 
 %RAES
-\cventry{AWP}{ACS Windows Porting}{ACS funcionaba solamente en linux (Redhat y Scientific Linux), por lo que herramientas que estaban disponibles solo para Windows quedaban limitadas (por ejemplo LabView). El primer objetivo de este proyecto fue portar ACS a windows, primero Java, luego C++ y Python (usando Cygwin y después herramientas nativas de windows como Visual Studio)}{}{}{}
+\cventry{AWP}{ACS Windows Porting}{ACS funcionaba solamente en linux (Redhat y Scientific Linux), por lo que herramientas que estaban disponibles solo para Windows quedaban limitadas (por ejemplo LabView). El producto de este proyecto fue portar ACS a windows, primero Java, luego C++ y Python (usando Cygwin y después herramientas nativas de windows como Visual Studio)}{}{}{}
 
 \cventry{ECSA}{Evaluation of Compilation Systems for ACS}{ACS presenta una complejidad elevada en el uso de archivos de configuración (Makefiles), y provee una API para tres lenguajes de programación oficialmente soportado: C++, Java, Python. Su estructura es muy compleja cuando se quiere añadir o cambiar software y toma grandes tiempos de compilación. El objetivo fue examinar la versión actual de ACS, las posibles mejoras, proponer mejoras o implementar un nuevo sistema de compilación para ACS y comparar las soluciones propuestas con el sistema en ese entonces}{}{}{}
 
-\cventry{ARPA}{Alternative Real- Time Platform for ACS}{Como un framework de control, ACS interactúa con componentes real-time (usualmente sistemas embebidos). Usar ACS en diferentes Real-Time Operative System (RTOS) no es una tarea trivial, ya que cada RTOS tiene sus propias formas de hacer las cosas. La idea principal de este proyecto fue configurar un test end-to-end de ejemplos real-time distribuidos, para validar ACS sobre RTOS, o proveer estándares o servicios real-time independientes para ACS}{}{}{}
+\cventry{ARPA}{Alternative Real- Time Platform for ACS}{Como un framework de control, ACS interactúa con componentes real-time (usualmente sistemas embebidos). Usar ACS en diferentes Real-Time Operative System (RTOS) no es una tarea trivial, ya que cada RTOS tiene sus propias formas de hacer las cosas. La idea principal de este producto fue configurar un test end-to-end de ejemplos real-time distribuidos, para validar ACS sobre RTOS, o proveer estándares o servicios real-time independientes para ACS}{}{}{}
 
-\cventry{TLEGOscope}{Radio TLEGOscope}{Este proyecto fue la continuación de ALS, pero solo de la antena. Se crearon dos modelos a escala más pequeñas, en el orden de 800 piezas cada uno. Además se creó un nuevo software de control más simplificado que no usa ACS}{}{}{}
+\cventry{TLEGOscope}{Radio TLEGOscope}{Es la continuación de ALS, pero solo de la antena. Se crearon dos modelos a escala más pequeñas, en el orden de 800 piezas cada uno. Además se creó un nuevo software de control más simplificado que no usa ACS}{}{}{}
 
 \cventry{ALS}{ALMA LEGO Simulator}{Es el producto de la feria de software que implementó el Lego Project. En este proyecto el equipo construyó los modelos de las antenas y transportador usando más de diez mil piezas, y el software de control está basado en ACS. Este proyecto tuvo un fuerte énfasis en el desarrollo de software, debido a que la simulación de la interacción entre la antena y el transportador es muy complejo. La simulación es capaz de tener un control coordinado, donde el software controla simultáneamente los dos modelos al mismo tiempo por conexión bluetooth}{}{}{}
 
-\cventry{Lego}{Lego Project}{El objetivo del proyecto es el desarrollo de modelos a escala de Lego para simular los movimientos de las antenas y el transportador, los cuales se utilizan en ALMA. Cada modelo debe tener un paso a paso, el manual de instrucciones de montaje, que contiene la lista detallada de las piezas necesarias para su construcción, además de los costos asociados. El proyecto nació en el contexto de ALMA Education and Public Outreach, el cual es una tarea difícil teniendo en cuenta la especificidad del proyecto. Puede que sea relativamente fácil de explicar a los ingenieros y científicos, a los que el alcance técnico es más fácil de entender. Sin embargo, se sabe que para la familia, la comunidad y los estudiantes, la comprensión de este proyecto demuestra que es mucho más complicado. Los robots tienen por objeto simplificar este trabajo y llegar a ser una herramienta alternativa para difundir ALMA para el público. Hecho con piezas de LEGO, la Antena y Transportador son controlados de forma inalámbrica por un software de control, lo que les permite hacer sus movimientos más representativos}{}{}{}
+\cventry{LegoProject}{Lego Project}{El objetivo del proyecto es el desarrollo de modelos a escala de Lego para simular los movimientos de las antenas y el transportador, los cuales se utilizan en ALMA. Cada modelo debe tener un paso a paso, el manual de instrucciones de montaje, que contiene la lista detallada de las piezas necesarias para su construcción, además de los costos asociados. El proyecto nació en el contexto de ALMA Education and Public Outreach, el cual es una tarea difícil teniendo en cuenta la especificidad del proyecto. Puede que sea relativamente fácil de explicar a los ingenieros y científicos, a los que el alcance técnico es más fácil de entender. Sin embargo, se sabe que para la familia, la comunidad y los estudiantes, la comprensión de este proyecto demuestra que es mucho más complicado. Los robots tienen por objeto simplificar este trabajo y llegar a ser una herramienta alternativa para difundir ALMA para el público. Hecho con piezas de LEGO, la Antena y Transportador son controlados de forma inalámbrica por un software de control, lo que les permite hacer sus movimientos más representativos}{}{}{}
 
-\cventry{LegoFarm}{LegoFarm Project}{LegoFarm Project: BrainStorm a través del producto LegoFarm, entrega un entorno de simulación del movimiento de las antenas del proyecto ALMA a través de kits Lego Mindstorms NXT. Dicho software tiene como objetivo lograr movimientos coordinados de las antenas simuladas. El resultado final de LegoFarm será útil como un ejemplo para los distintos cursos y congresos que están siendo realizados con la idea de enseñar acerca de Sistemas Distribuidos}{}{}{}
+\cventry{LegoFarm}{LegoFarm Project}{BrainStorm a través del producto LegoFarm, entrega un entorno de simulación del movimiento de las antenas del proyecto ALMA a través de kits Lego Mindstorms NXT. Dicho software tiene como objetivo lograr movimientos coordinados de las antenas simuladas. El resultado final de LegoFarm será útil como un ejemplo para los distintos cursos y congresos que están siendo realizados con la idea de enseñar acerca de Sistemas Distribuidos}{}{}{}
 
 \cventry{Hevelius}{Hevelius Project}{Hevelius es un sistema de interfaz gráfica de usuario de control del telescopio, diseñado y desarrollado para operar en telescopio amateur. La funcionalidad de control está a cargo de ACS, y el principal objetivo de Hevelius es ser una referencia para el control genérico de Telescopios}{}{}{}
 
@@ -135,5 +135,16 @@ Telescope Simulation Environment (TelSE): Los obejtivos de este proyecto eran pr
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{reports}{unsrt}
 \bibliography{reports}{reports}{Reportes Técnicos}
+
+\section{Equipo}
+\cventry{Académico}{Mauricio Solar}{Profesor Departamento Informática}{Santiago}{}{}
+\cventry{Académico}{Marcelo Mendoza}{Profesor Departamento Informática}{Santiago}{}{}
+\cventry{Académico}{Horst von Brand}{Profesor Departamento Informática}{Valparaíso}{}{}
+\cventry{Académico}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
+\cventry{Tesistas}{Actuales: 1}{Históricos: 4}{}{}{}
+\cventry{Memoristas}{Actuales: 5}{Históricos: 12}{}{}{}
+\cventry{Pregrado}{Actuales: 16}{Históricos: 60 app}{}{}{}
+\vspace{2cm}
+\hfill \today
 
 \end{document}
