--- a/es/publications.bib
+++ b/es/publications.bib
@@ -1,23 +1,31 @@
 @InProceedings{jantogni2010:_primeros_pasos_chivo,
-  author =   {Jonathan Antognini and Mauricio Solar and Marcelo Mendoza and José Marroquín and Cristián Maureira and Jorge Ibsen and Larse Nyman},
+  author =   {Jonathan Antognini and Mauricio Solar and Marcelo Mendoza and José Marroquín and Cristián Maureira and Jorge Ibsen and Lars Nyman},
   title =  {Primeros pasos del Observatorio Virtual Chileno},
   booktitle =  {INFONOR},
   year =   2013,
   location =   {Coquimbo, Chile},
 }
 
-@InProceedings{mmora10:_aia_dpm,
+@InProceedings{mmora11:_solution_aia_dpm,
   author =   {Matias Mora and Mauricio Solar},
-  title =  {A code generation framework for ALMA common software},
-  booktitle =  {World Computer Congress, International Federation for Information Proccessing, Artificial Intelligence},
-  year =   2010,
-  pages =  {111},
+  title =  {A solution of the dynamic scheduling problem in astronomical observations},
+  booktitle =  {IFORS Int. Conf. on Operational Research},
+  year =   2011,
+  pages =  {111-120},
   location =   {Brisbane, Australia},
+}
+
+@InProceedings{mmora10:_survey_aia_dpm,
+  author =   {Matias Mora and Mauricio Solar},
+  title =  {A survey on the dynamic scheduling problem in astronomical observations},
+  booktitle =  {Springer Science and Business Media, In M. Bramer (Ed.): IFIP Artificial Intelligence},
+  year =   2010,
+  location =   {Melbourne, Australia},
 }
 
 @InProceedings{ntroncoso10:_code_generation,
   author =   {Nicolas Troncoso and Horstvon Brand and Jorge Ibsen and Matias Mora and Victor Gonzalez and Gianluca Chiozzi and Bogdan Jeram and Heiko Sommer and Gabriel Zamora and Alexis Tejeda},
-  title =  {A survey on the dynamic scheduling problem in astronomical observations},
+  title =  {A code generation framework for ALMA common software},
   booktitle =  {Society of Photographic Instrumentation Engineers, Software and Cyberinfrastructure for Astronomy},
   year =   2010,
   location =   {San Diego, California, USA},
