--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -140,7 +140,9 @@
 \cventry{Académico}{Mauricio Solar}{Profesor Departamento Informática}{Santiago}{}{}
 \cventry{Académico}{Marcelo Mendoza}{Profesor Departamento Informática}{Santiago}{}{}
 \cventry{Académico}{Horst von Brand}{Profesor Departamento Informática}{Valparaíso}{}{}
+\cventry{Académico}{Cecilia Reyes}{Profesora Departamento Informática}{Valparaíso}{}{}
 \cventry{Académico}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
+\cventry{Profesionales}{Actuales: 2}{Históricos: 2}{Valparaíso}{}{}
 \cventry{Tesistas}{Actuales: 1}{Históricos: 4}{}{}{}
 \cventry{Memoristas}{Actuales: 5}{Históricos: 12}{}{}{}
 \cventry{Pregrado}{Actuales: 16}{Históricos: 60 app}{}{}{}
