deleting some extra parms

--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -142,7 +142,7 @@
 \cventry{Académico}{Horst von Brand}{Profesor Departamento Informática}{Valparaíso}{}{}
 \cventry{Académico}{Cecilia Reyes}{Profesora Departamento Informática}{Valparaíso}{}{}
 \cventry{Académico}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
-\cventry{Profesionales}{Actuales: 2}{Históricos: 2}{Valparaíso}{}{}
+\cventry{Profesionales}{Actuales: 2}{Históricos: 2}{}{}{}
 \cventry{Tesistas}{Actuales: 1}{Históricos: 4}{}{}{}
 \cventry{Memoristas}{Actuales: 5}{Históricos: 12}{}{}{}
 \cventry{Pregrado}{Actuales: 16}{Históricos: 60 app}{}{}{}
