adding conicyt-ichaa

--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -27,6 +27,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Proyectos}
+\cventry{CONICYT-ICHAA}{CONICYT-ICHAA 79130008: Consolidación de área astroinformática en investigación y docencia}{Consolidar el área de astroinformática para cubrir la creciente demanda de ingenieros e investigadores para grandes proyectos astronómicos, fomentando la productividad científica del departamento mediante la investigación aplicada y multidisciplinaria}{Colaboración: UTFSM}{Productos: en progreso}{2013-2016}
 \cventry{FONDEF-CONICYT}{FONDEF D11I1060: Desarrollo de una plataforma astroinformática para la administración y análisis inteligente de datos a gran escala}{La plataforma chilena de astro-informática permitirá la administración y análisis inteligente de datos a gran escala –cerca de 750 gigabytes cada día–, captados por el radiotelescopio Atacama Large Millimeter/submillimeter Array (ALMA), generando información de calidad procesada en Chile y puesta a disposición de la comunidad científica internacional a través de este Observatorio Virtual chileno (ChiVO)}{Colaboración: UTFSM, UCHILE, PUCV, UdeC, USACH, ALMA, REUNA}{Productos: en progreso}{2013 - 2015}
 \cventry{ECOS-Conicyt}{ECOS-Conicyt: Scheduling in Astronomy}{Considerando que ninguno de los observatorios profesionales ofrece una solución totalmente automatizada para optimizar el uso de las instalaciones astronómicas bajo condiciones cambiantes y dinámicas, en este proyecto se propone el desarrollo de un modelo de scheduling para el problema de scheduling con prioridades dinámicas.}{Colaboración: UTFSM, Université d'Avignon}{Productos: en progreso}{2011 - 2013}
 \cventry{ALMA-CONICYT}{ALMA-CONICYT \#31080031: Computer Science for ALMA - Strengthening Research and Development within a Chilean University}{El objetivo del proyecto fue reforzar la colaboración entre el proyecto ALMA y la UTFSM, e introducir temas astronómicos dentro de la Universidad y en la comunidad Chilena de computación}{Colaboración: UTFSM, ESO, NRAO, AUI}{Productos: ASP, ASPu*, ADSP}{2009 - 2010}
@@ -141,7 +142,7 @@
 \cventry{Académico}{Marcelo Mendoza}{Profesor Departamento Informática}{Santiago}{}{}
 \cventry{Académico}{Horst von Brand}{Profesor Departamento Informática}{Valparaíso}{}{}
 \cventry{Académico}{Cecilia Reyes}{Profesora Departamento Informática}{Valparaíso}{}{}
-\cventry{Académico}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
+\cventry{Investigador}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
 \cventry{Profesionales}{Actuales: 2}{Históricos: 2}{}{}{}
 \cventry{Tesistas}{Actuales: 1}{Históricos: 4}{}{}{}
 \cventry{Memoristas}{Actuales: 5}{Históricos: 12}{}{}{}
