Adding publications and theses

--- a/es/publications.bib
+++ b/es/publications.bib
@@ -1,4 +1,36 @@
-@InProceedings{jantogni2010:_primeros_pasos_chivo,
+@InProceedings{jantogni2014:_chivo_tech,
+  author =   {Jonathan Antognini and Mauricio Solar and Jorge Ibsen and Lars Nyman and Diego Mardones and Karim Pichara and Ricardo Contreras and Victor Parada and Camilo Valenzuela and Patricio Ramirez and Christopher Fernandez and Mario Garces},
+  title =  {Chilean Virtual Observatory services implementation for the ALMA public data},
+  publisher =  {SPIE},
+  year =   2014,
+  booktitle =  {Software and Cyberinfrastructure for Astronomy III},
+  location =   {Montréal, Quebec Canada},
+}
+@InProceedings{msolar2014:_chivo_manag,
+  author =   {Mauricio Solar and Jonathan Antognini and Jorge Ibsen and Lars Nyman and Diego Mardones and Karim Pichara and Ricardo Contreras and Victor Parada},
+  title =  {Chilean Virtual Observatory and Integration with ALMA},
+  publisher =  {SPIE},
+  year =   2014,
+  booktitle =  {Modeling, Systems Engineering, and Project Management for Astronomy VI},
+  location =   {Montréal, Quebec Canada},
+}
+@InProceedings{rgregori:_classification_spie,
+  author =   {Rodrigo Gregorio and Mauricio Solar and Diego Mardones and Karim Pichara and Ricardo Contreras and Victor Parada},
+  title =  {Automatic Detection and Automatic Classification of Structures in Astronomical Images},
+  publisher =  {SPIE},
+  year =   2014,
+  booktitle =  {Software and Cyberinfrastructure for Astronomy III},
+  location =   {Montréal, Quebec Canada},
+}
+
+@InProceedings{rgregori:_classification,
+  author =   {Rodrigo Gregorio and Mauricio Solar and Diego Mardones and Karim Pichara and Ricardo Contreras and Victor Parada and Guillermo Cabrera},
+  title =  {Automatic Detection and Classification of Structures at Different Spatial Scales in Astronomical Images },
+  booktitle =  {SOCHIAS},
+  year =   2014,
+  location =   {Los Andes, Chile},
+}
+@InProceedings{jantogni2013:_primeros_pasos_chivo,
   author =   {Jonathan Antognini and Mauricio Solar and Marcelo Mendoza and José Marroquín and Cristián Maureira and Jorge Ibsen and Lars Nyman},
   title =  {Primeros pasos del Observatorio Virtual Chileno},
   booktitle =  {INFONOR},
