--- a/es/theses.bib
+++ b/es/theses.bib
@@ -32,6 +32,20 @@
   year =	 2008
 }
 
+@Misc{mgarces:_splm,
+  title = {Un modelo de calendarización en Astronomía basado en Programación Lineal Entera Mixta},
+  author = {Mario Ignacio {Garces Toro}},
+  howpublished = {Tesis para optar al T{\'i} tulo de Ingeniero Civil Inform{\'a}tico, Universidad T{\'e}cnica Federico Santa Mar{\'i}a},
+  year = 2014
+}
+
+@Misc{rgregori:_asp,
+  title = {Idiotypic Immune Networks for ALMA Array Scheduling Problema },
+  author = {Rodrigo Antonio {Gregorio Lovera}},
+  howpublished = {Tesis para optar al T{\'i} tulo de Ingeniero Civil Inform{\'a}tico, Universidad T{\'e}cnica Federico Santa Mar{\'i}a},
+  year = 2014
+}
+
 @Misc{wfarina:_diseno_chivo,
   title = {Diseño Conceptual de un Observatorio Virtual Astronómico para ALMA},
   author = {Walter Rodrigo {Fariña Perez}},
