--- a/es/curriculum.tex
+++ b/es/curriculum.tex
@@ -142,7 +142,7 @@
 \cventry{Académico}{Marcelo Mendoza}{Profesor Departamento Informática}{Santiago}{}{}
 \cventry{Académico}{Horst von Brand}{Profesor Departamento Informática}{Valparaíso}{}{}
 \cventry{Académico}{Cecilia Reyes}{Profesora Departamento Informática}{Valparaíso}{}{}
-\cventry{Investigador}{Mauricio Araya}{Investigador}{Valparaíso}{}{}
+\cventry{Investigador}{Mauricio Araya}{Departamento Informática}{Valparaíso}{}{}
 \cventry{Profesionales}{Actuales: 2}{Históricos: 2}{}{}{}
 \cventry{Tesistas}{Actuales: 1}{Históricos: 4}{}{}{}
 \cventry{Memoristas}{Actuales: 5}{Históricos: 12}{}{}{}
