Added a few references

--- a/es/publications.bib
+++ b/es/publications.bib
@@ -1,3 +1,24 @@
+
+@InProceedings{maray2014:_asydo,
+  author =   {Mauricio Araya and Mauricio Solar and Diego Mardones and Teodoro Hochfärber},
+  title =  {Exorcising the Ghost in the Machine: Synthetic Spectral Data Cubes for Assessing Big Data Algorithms},
+  publisher =  {ADASS},
+  year =   2014,
+  booktitle =  {Astronomical Data Analysis Software \& Systems},
+  location =   {Calgary, Alberta Canada},
+}
+
+@InProceedings{jantogni2014:_nosql,
+  author =   {Jonathan Antognini and Mauricio Araya and Mauricio Solar and Camilo Valenzuela and Francisco Lira},
+  title =  {Evaluating NoSQL alternative for Chilean Virtual Observatory Services},
+  publisher =  {ADASS},
+  year =   2014,
+  booktitle =  {Astronomical Data Analysis Software \& Systems},
+  location =   {Calgary, Alberta Canada},
+}
+
+
+
 @InProceedings{jantogni2014:_chivo_tech,
   author =   {Jonathan Antognini and Mauricio Solar and Jorge Ibsen and Lars Nyman and Diego Mardones and Karim Pichara and Ricardo Contreras and Victor Parada and Camilo Valenzuela and Patricio Ramirez and Christopher Fernandez and Mario Garces},
   title =  {Chilean Virtual Observatory services implementation for the ALMA public data},
